[package]
name = "Cray"
version = "0.1.0"
edition = "2024"

[dependencies]
# runtime
tokio = { version = "1", features = [
    "net",
    "io-util",
    "rt-multi-thread",
    "macros",
    "parking_lot",
] }
tokio-util = { version = "*", features = ["io"] }
futures-util = "0.3"
parking_lot = "*"
# http
hyper = { version = "*", features = ["http1", "http2", "server"] }
hyper-util = { version = "*", features = ["server-auto", "tokio"] }
http-body-util = "*"
# data
bytes = "1"
uuid = "*"
anyhow = "1.0" # 用于简化错误处理
regex = "*"
url = "*"
# random
rand = "*"
# log
flexi_logger = "*"
log = "*"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1", features = ["v3"] }



[profile.release]
strip = true             # 自动从二进制文件去除符号信息.
opt-level = "s"
codegen-units = 1
lto = "fat"              # 完全 LTO（编译慢但性能更好）
panic = "abort"
overflow-checks = false  # 禁用整数溢出检查（提升速度，需确保安全）
debug = false            # 禁用调试符号（减小体积）
debug-assertions = false # 是否启用 debug-assertions（在 release 中通常关闭，以避免额外检查开销）
incremental = false      # 关闭增量编译，减少内存占用

# 为所有依赖也强制设置 opt-level
[profile.release.package."*"]
opt-level = "s"
